package edu.austral.dissis.chess.piece;

public enum PieceType {
  PAWN,
  ROOK,
  KNIGHT,
  QUEEN,
  KING,
  BISHOP
}
