package edu.austral.dissis.chess.piece.movement;

public enum MoveType {
  HORIZONTAL,
  VERTICAL,
  DIAGONAL
}
