package edu.austral.dissis.chess.utils;

public enum ChessMoveResult {
  WHITE_WIN,
  BLACK_WIN,
  INVALID_MOVE,
  VALID_MOVE,
  PIECE_TAKEN
}
