package edu.austral.dissis.chess.utils;

public record Pair<T, W>(T first, W second) {}
