package edu.austral.dissis.chess.utils.type;

public enum GameType {
  DEFAULT
}
